--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -1,5 +1,18 @@
 body{
-    color: chocolate;
-    text-align: center;
+    color: #333;
+    text-align: left;
     font-family: "Arial";
+    font-size: 16pxz;
+}
+
+#container{
+    width: 70%;
+    padding: lem;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
+}
+
+#container h1{
+    font-size: 20px;
 }
