--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -2,7 +2,7 @@ body{
     color: chocolate;
     text-align: center;
     font-family: "Arial";
-    color: #333;
+    color: blue;
     text-align: left;
     font-family: "Arial";
     font-size: 16pxz;
